# Chip8PP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile
src/: core.cpp  core.hpp  default_font.hpp  main.cpp
